[project]
name = "qc-ft-prob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pillow>=10.4.0",
    "qulacs>=0.6.12",
    "qulacsvis>=0.7.6",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
